testdata/baselines/reference/submodule/conformance/moduleResolutionWithoutExtension8.errors.txt
error TS2468: Cannot find global value 'Promise'.
/src/bar.cts(2,1): error TS2712: A dynamic import call in ES5 requires the 'Promise' constructor.  Make sure you have a declaration for the 'Promise' constructor or include 'ES2015' in your '--lib' option.
/src/bar.cts(2,8): error TS2307: Cannot find module './foo' or its corresponding type declarations.


!!! error TS2468: Cannot find global value 'Promise'.
==== /src/bar.cts (2 errors) ====
    // Extensionless relative path dynamic import in a cjs module
    import("./foo").then(x => x); // should error, ask for extension
    ~~~~~~~~~~~~~~~
!!! error TS2712: A dynamic import call in ES5 requires the 'Promise' constructor.  Make sure you have a declaration for the 'Promise' constructor or include 'ES2015' in your '--lib' option.
           ~~~~~~~
!!! error TS2307: Cannot find module './foo' or its corresponding type declarations.